# isms-bench-artifact

./: .gitignore  ARTIFACT.md  ARTIFACT_MANIFEST.md  BENCHMARK_CARD.md  CLAIMS_AND_EVIDENCE.csv  CLAIMS_AND_EVIDENCE.md  LABEL_AUDIT.md  LICENSE.md  Makefile  README.md  REPRODUCIBILITY.md  SCOPE_AND_LIMITATIONS.md  pyproject.toml  requirements.txt
external_validation_protocol/: README.md  annotation_form.csv  criteria_definitions.md
scripts/: analyze_public_external_errors_v18b.py  build_corpus.py  build_public_external_validation_v18.py  build_public_external_validation_v18b.py  build_public_external_validation_v18c.py  build_public_template_stress_v13.py  check_generator_coupling.py  check_label_leakage.py  check_llm_env_v14.py  create_llm_attack_subset_v14.py  create_llm_eval_subset_v13.py  generate_alt_cases_v07.py  generate_attack_cases.py  generate_mutation_cases.py  generate_paraphrase_stress_v04.py  generate_synthetic_cases.py  make_tables.py  run_ablation.py  run_attack_eval.py  run_bootstrap_ci.py  run_compliance_eval.py  run_external_validity_eval_v07.py  run_label_audit.py  run_llm_baselines_v13.py  run_manual_challenge_eval_v09.py  run_metadata_spoofing_ablation_v23.py  run_public_external_validation_eval_v18.py  run_public_external_validation_eval_v18b.py  run_public_external_validation_eval_v18c.py  run_public_template_stress_eval_v13.py  run_residual_attack_risk_sensitivity.py  run_retrieval_eval.py
tests/: test_artifact_readiness.py  test_metrics.py  test_models.py  test_mutations_attacks_and_leakage.py  test_retrieval_and_compliance.py  (+6 more)
(+231 files in other folders)
